--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
           {{post.player}}
         {% endif %}
         {% if post.photo %}
-          <img src="{{post.photo}}">
+          <a href="{{post.url | prepend: site.baseurl }}"><img src="{{post.photo}}"></a>
         {% endif %}
         {% if post.content %}
           {{post.content | truncate: 300 }}
