--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
           <a href="{{post.url | prepend: site.baseurl }}"><img src="{{post.photo}}"></a>
         {% endif %}
         {% if post.content %}
-          {{post.content | strip_html | truncate: 300 }}
+          <p>{{post.content | strip_html | truncate: 300 }}</p>
         {% endif %}
       </li>
     {% endfor %}
