--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@ layout: default
             {{ post.title | truncate: 65 }}
           </a>
         </h2>
-        {% if post.player %}
-          {{post.player}}
-        {% endif %}
+        {% include video.html param=post %}
         {% if post.photo %}
           <a href="{{post.url | prepend: site.baseurl }}"><img src="{{post.photo}}"></a>
         {% endif %}
